@@ -201,7 +201,7 @@ IceProxy::Ice::Object::ice_isA(const string& __id, const Context& __context)
             {
                 throw ::IceInternal::NonRepeatable(__ex);
             }
-#if defined(_MSC_VER) && (_MSC_VER == 1201) && defined(_M_ARM) // EVC4 SP4 bug.
+#if defined(_MSC_VER) && defined(_M_ARM) // ARM bug.
             catch(...)
             {
                 throw;
@@ -217,7 +217,7 @@ IceProxy::Ice::Object::ice_isA(const string& __id, const Context& __context)
 	{
 	    __handleException(__ex, __cnt);
 	}
-#if defined(_MSC_VER) && (_MSC_VER == 1201) && defined(_M_ARM) // EVC4 SP4 bug.
+#if defined(_MSC_VER) && defined(_M_ARM) // ARM bug.
 	catch(...)
 	{
 	    throw;
@@ -260,7 +260,7 @@ IceProxy::Ice::Object::ice_ping(const Context& __context)
             {
                 throw ::IceInternal::NonRepeatable(__ex);
             }
-#if defined(_MSC_VER) && (_MSC_VER == 1201) && defined(_M_ARM) // EVC4 SP4 bug.
+#if defined(_MSC_VER) && defined(_M_ARM) // ARM bug.
             catch(...)
             {
                 throw;
@@ -276,7 +276,7 @@ IceProxy::Ice::Object::ice_ping(const Context& __context)
 	{
 	    __handleException(__ex, __cnt);
 	}
-#if defined(_MSC_VER) && (_MSC_VER == 1201) && defined(_M_ARM) // EVC4 SP4 bug.
+#if defined(_MSC_VER) && defined(_M_ARM) // ARM bug.
 	catch(...)
 	{
 	    throw;
@@ -322,7 +322,7 @@ IceProxy::Ice::Object::ice_ids(const Context& __context)
             {
                 throw ::IceInternal::NonRepeatable(__ex);
             }
-#if defined(_MSC_VER) && (_MSC_VER == 1201) && defined(_M_ARM) // EVC4 SP4 bug.
+#if defined(_MSC_VER) && defined(_M_ARM) // ARM bug.
             catch(...)
             {
                 throw;
@@ -338,7 +338,7 @@ IceProxy::Ice::Object::ice_ids(const Context& __context)
 	{
 	    __handleException(__ex, __cnt);
 	}
-#if defined(_MSC_VER) && (_MSC_VER == 1201) && defined(_M_ARM) // EVC4 SP4 bug.
+#if defined(_MSC_VER) && defined(_M_ARM) // ARM bug.
 	catch(...)
 	{
 	    throw;
@@ -384,7 +384,7 @@ IceProxy::Ice::Object::ice_id(const Context& __context)
             {
                 throw ::IceInternal::NonRepeatable(__ex);
             }
-#if defined(_MSC_VER) && (_MSC_VER == 1201) && defined(_M_ARM) // EVC4 SP4 bug.
+#if defined(_MSC_VER) && defined(_M_ARM) // ARM bug.
             catch(...)
             {
                 throw;
@@ -400,7 +400,7 @@ IceProxy::Ice::Object::ice_id(const Context& __context)
 	{
 	    __handleException(__ex, __cnt);
 	}
-#if defined(_MSC_VER) && (_MSC_VER == 1201) && defined(_M_ARM) // EVC4 SP4 bug.
+#if defined(_MSC_VER) && defined(_M_ARM) // ARM bug.
 	catch(...)
 	{
 	    throw;
