@@ -1,6 +1,9 @@
 Changes since version 1.0.0
 ---------------------------
 
+- Added blocking client side concurrency model. The use of this model is
+  controlled by the Ice.Blocking property.
+
 - If a proxy is not configured with a -h paramater, Ice will now
   attempt to connect using all local interfaces. The loopback interface 
   (127.0.0.1) will only be tried if it is the only local interface present.
